# End-to-End-MLOps-Bootcamp-Build-Deploy-and-Automate-ML-with-Data-Science-Projects

./: .gitignore  GitNotes.md  README.md  main.py  pyproject.toml  sample.ipynb
DataScienceProject/: README.md  main.py  pyproject.toml  template.py
Docs/: ruff implementation.md
My Course Notes/: Readme.md
myFirstNewProject/: main.py  pyproject.toml  readme.md  template.py
myFirstNewProject/config/: config.yaml
myFirstNewProject/research/: 01_data_ingestion.ipynb  research.ipynb
myFirstNewProject/src/my_first_end_to_end_project/: __init__.py
myFirstNewProject/src/my_first_end_to_end_project/components/: data_ingestion.py
myFirstNewProject/src/my_first_end_to_end_project/config/: configuration.py
myFirstNewProject/src/my_first_end_to_end_project/entity/: config_entity.py
myFirstNewProject/src/my_first_end_to_end_project/logger/: __init__.py
myFirstNewProject/src/my_first_end_to_end_project/pipeline/: 01_data_ingestion.py  data_ingestion_pipeline.py
myFirstNewProject/src/my_first_end_to_end_project/utils/: common_utils.py
